[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/Main_Menu.gd" type="Script" id=1]
[ext_resource path="res://Menu/No_Save_Flie.tscn" type="PackedScene" id=2]
[ext_resource path="res://Worlds smallest violin shorts memes_320kbps.mp3" type="AudioStream" id=3]

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.0
margin_right = 10.0
margin_bottom = 22.0

[node name="Start_Button" type="Button" parent="VBoxContainer"]
margin_right = 1034.0
margin_bottom = 20.0
text = "START"
flat = true

[node name="Load_Button" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1034.0
margin_bottom = 44.0
text = "LOAD"
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1034.0
margin_bottom = 108.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_right = 592.0
margin_bottom = 60.0

[node name="Full_Screen" type="CheckButton" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 40.0
pressed = true
text = "Full Screen"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 150.0
margin_bottom = 60.0
min_value = -20.0
max_value = 0.0

[node name="Exit_Button" type="Button" parent="VBoxContainer"]
margin_top = 112.0
margin_right = 1034.0
margin_bottom = 132.0
text = "EXIT"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="No_Save_Flie" parent="." instance=ExtResource( 2 )]

[node name="Control" type="Control" parent="."]
margin_left = 54.0
margin_top = 76.0
margin_right = 254.0
margin_bottom = 321.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
margin_right = 116.0
margin_bottom = 31.0
text = "A/W/S/D:  move
Esc:   pause menu	"

[connection signal="pressed" from="VBoxContainer/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Load_Button" to="." method="_on_Load_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Full_Screen" to="." method="_on_Full_Screen_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Exit_Button" to="." method="_on_Exit_Button_pressed"]
